# EoE

./: .gitignore  CMakeLists.txt  script
data/fonts/: consolas18.bff  couriernew20.bff  hackregular.bff
data/shaders/: text.frag  text.vert
src/: CharRend.cpp  CharRend.h  CharRendF.cpp  CharRendF.h  Font.cpp  Font.h  Options.cpp  Options.h  Script.cpp  Script.h  TextProc.cpp  TextProc.h  Textbox.cpp  Textbox.h  Window.cpp  Window.h  WindowEventCallback.cpp  WindowEventCallback.h  main.cpp
src/cmake/: config.h.in
src/core/: Context.cpp  Context.h  Group.cpp  Group.h  Node.cpp  Node.h  debug.h  error.cpp  error.h  keys.cpp  keys.h
src/game/: Game.cpp  Game.h
src/game/scenes/: Begin.cpp  Begin.h  Text.cpp  Text.h
src/game/scripts/: Intro.h
src/lib/: glfw.h  opengl.h
src/render/: Matrix.cpp  Matrix.h  Mesh.cpp  Mesh.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h
